Fix T51011: bpy.ops.action.new does nothing when invoked from script

The operator always expect to be called form a button.
But this is not always the case.

This does not bring functional changes when not called from python.